--- a/HousingFund-Task-mariadb5.5.properties
+++ b/HousingFund-Task-mariadb5.5.properties
@@ -1,6 +1,6 @@
 kafka.brokers:kafka-broker-1:9092,kafka-broker-2:9092,kafka-broker-3:9092
 kafka.zknodes:zookeeper-zk-1:2181,zookeeper-zk-2:2181,zookeeper-zk-3:2181
-datasource.jdbc.url:jdbc:mysql://mysql-mysql-lb-1:3306/crawler_carrier
+datasource.jdbc.url:jdbc:mysql://mysql-mysql-lb-1:3306/crawler_housing
 datasource.jdbc.driver:com.mysql.jdbc.Driver
 datasource.jdbc.username:root
 datasource.jdbc.password:12qwaszx
