--- a/crawler-cmcc-mariadb5.5.properties
+++ b/crawler-cmcc-mariadb5.5.properties
@@ -9,3 +9,5 @@ datasource.jdbc.maxPoolSize:5
 datasource.jdbc.type:com.zaxxer.hikari.HikariDataSource
 datasource.jdbc.dialect:org.hibernate.dialect.MySQL5Dialect
 datasource.initialization-mode:never
+webdriver.chrome.driver.path:/opt/selenium/chromedriver-2.38
+webdriver.proxy:0
